--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body>
     <h1>Hello, world!</h1>
     <p>hi there</p>
+    <i class="fa-brands fa-instagram"></i>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
