--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     ></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>hi there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <h1>Ana Fontão</h1>
+      <h2 class="mb-5">Front-end developer based in Europe</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
