--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     ></script>
   </head>
   <body>
-    <div class="hero">
+    <div class="hero pt-5 mb-5 pb-5">
       <h1>Ana Fontão</h1>
       <h2 class="mb-5">Front-end developer based in Europe</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <h2 class="text-center">Take a look at some of my Front-end projects</h2>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
