--- a/index.html
+++ b/index.html
@@ -30,7 +30,129 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
-    <h2 class="text-center">Take a look at some of my Front-end projects</h2>
+    <h2 class="text-center mt-5 mb-5">Take a look at my Front-end projects</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/ai-poem-generator.PNG"
+            alt="AI poem generator"
+            class="img-fluid align-self-center"
+          />
+        </div>
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">AI Poem Generator</h3>
+          <p class="mb-4 text-muted">
+            This is an AI Poem Generator that generates poems based on the
+            user's input theme
+            <br />
+            Clean and simple interface
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">AI Quote Generator</h3>
+          <p class="mb-4 text-muted">
+            This is an AI Quote Generator that quotes poems based on the user's
+            input theme
+            <br />
+            Clean and simple interface
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/ai-quote-generator.PNG"
+            alt="AI quote generator"
+            class="img-fluid align-self-center"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/world-clock.PNG"
+            alt="World Clock"
+            class="img-fluid align-self-center"
+          />
+        </div>
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">World Clock</h3>
+          <p class="mb-4 text-muted">
+            World Clock with multiple predifined locations.
+            <br />
+            Includes current location timezone
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">Weather app</h3>
+          <p class="mb-4 text-muted">
+            Simple, light coloured weather app <br />
+            Search the weather in any location of the globe
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/weather-app.PNG"
+            alt="Weather app"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/gaming.PNG"
+            alt="World Clock"
+            class="img-fluid align-self-center"
+          />
+        </div>
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">Gaming</h3>
+          <p class="mb-4 text-muted">
+            A small page about one of my favorite hobbies - playing Nintento
+            games.
+            <br />
+            Includes a black theme interface
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">Pastel de Nata Page</h3>
+          <p class="mb-4 text-muted">
+            My very first page made during my 1st Front-end workshop with
+            SheCodes<br />
+            Very simple and light coloured
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/pastel-nata.PNG"
+            alt="Pastel de Nata"
+            class="img-fluid align-self-center"
+          />
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
