--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     ></script>
   </head>
   <body>
-    <div class="hero pt-5 mb-5 pb-5">
+    <div class="hero">
       <h1>Ana Fontão</h1>
       <h2 class="mb-5">Front-end developer based in Europe</h2>
       <div>
@@ -93,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col project-description align-self-center">
           <h3 class="mb-5">Weather app</h3>
@@ -108,47 +108,6 @@
             src="images/weather-app.PNG"
             alt="Weather app"
             class="img-fluid"
-          />
-        </div>
-      </div>
-    </div>
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col d-none d-md-block">
-          <img
-            src="images/gaming.PNG"
-            alt="World Clock"
-            class="img-fluid align-self-center"
-          />
-        </div>
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">Gaming</h3>
-          <p class="mb-4 text-muted">
-            A small page about one of my favorite hobbies - playing Nintento
-            games.
-            <br />
-            Includes a black theme interface
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
-        </div>
-      </div>
-    </div>
-    <div class="container mt-5 mb-5">
-      <div class="row">
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">Pastel de Nata Page</h3>
-          <p class="mb-4 text-muted">
-            My very first page made during my 1st Front-end workshop with
-            SheCodes<br />
-            Very simple and light coloured
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
-        </div>
-        <div class="col d-none d-md-block">
-          <img
-            src="images/pastel-nata.PNG"
-            alt="Pastel de Nata"
-            class="img-fluid align-self-center"
           />
         </div>
       </div>
