--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>👩‍💻 Ana Fontao Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,11 +21,50 @@
       src="https://kit.fontawesome.com/229f65b889.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/229f65b889.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">AF</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse flex-row-reverse"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="work.html">Work</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <h1>Ana Fontão</h1>
       <h2 class="mb-5">Front-end developer based in Europe</h2>
+      <ul class="d-flex justify-content-center align-items-center">
+        <li class="fs-5">Tech Stack |</li>
+        <li>
+          <i class="fa-brands fa-html5"></i>
+        </li>
+        <li><i class="fa-brands fa-css3-alt"></i></li>
+        <li><i class="fa-brands fa-js"></i></li>
+      </ul>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
