--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ana Fontao / About page</title>
+    <title>AF - Work</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -54,19 +54,6 @@
         </div>
       </div>
     </nav>
-    <div class="container d-flex justify-content-center mt-5 mb-5 gap-4">
-      <div>
-        <h2>Hi, I am Ana Fontão</h2>
-        <h3>Front-end developer based in Portugal</h3>
-        <a href="" class="btn btn-branding">Check my projects</a>
-      </div>
-
-      <img
-        src="images/AnaFontao.JPG"
-        alt="AnaFontao"
-        class="rounded my-photo"
-      />
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
