--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">AF</a>
         <button
