--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">AF</a>
         <button
@@ -59,97 +59,80 @@
       <h2 class="mb-5">Front-end developer based in Europe</h2>
       <ul class="d-flex justify-content-center align-items-center">
         <li class="fs-5">Tech Stack |</li>
-        <li>
-          <i class="fa-brands fa-html5"></i>
-        </li>
+        <li><i class="fa-brands fa-html5"></i></li>
         <li><i class="fa-brands fa-css3-alt"></i></li>
         <li><i class="fa-brands fa-js"></i></li>
       </ul>
-      <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
-      </div>
     </div>
-    <h2 class="text-center mt-5 mb-5">Take a look at my Front-end projects</h2>
+    <p class="text-center mt-5 mb-5">Check some of my featured projects</p>
     <div class="container">
-      <div class="row">
-        <div class="col d-none d-md-block">
-          <img
-            src="images/ai-poem-generator.PNG"
-            alt="AI poem generator"
-            class="img-fluid align-self-center"
-          />
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img
+              src="images/weather-app.png"
+              class="card-img-top"
+              alt="Weather app"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Weather app</h5>
+              <p class="card-text">
+                Simple, light coloured weather app. <br />
+                Search the weather in any location of the globe.
+              </p>
+              <a href="work.html#weather" class="btn btn-branding"
+                >Learn more</a
+              >
+            </div>
+          </div>
         </div>
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">AI Poem Generator</h3>
-          <p class="mb-4 text-muted">
-            This is an AI Poem Generator that generates poems based on the
-            user's input theme
-            <br />
-            Clean and simple interface
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img
+              src="images/clock-app.png"
+              class="card-img-top"
+              alt="Clock app"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Clock app</h5>
+              <p class="card-text">
+                World Clock with multiple predifined locations.
+                <br />
+                Includes current location timezone.
+              </p>
+              <a href="work.html#clock" class="btn btn-branding">Learn more</a>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">AI Quote Generator</h3>
-          <p class="mb-4 text-muted">
-            This is an AI Quote Generator that quotes poems based on the user's
-            input theme
-            <br />
-            Clean and simple interface
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
-        </div>
-        <div class="col d-none d-md-block">
-          <img
-            src="images/ai-quote-generator.PNG"
-            alt="AI quote generator"
-            class="img-fluid align-self-center"
-          />
-        </div>
-      </div>
-    </div>
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col d-none d-md-block">
-          <img
-            src="images/world-clock.PNG"
-            alt="World Clock"
-            class="img-fluid align-self-center"
-          />
-        </div>
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">World Clock</h3>
-          <p class="mb-4 text-muted">
-            World Clock with multiple predifined locations.
-            <br />
-            Includes current location timezone
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img
+              src="images/ai-poem-generator.png"
+              class="card-img-top"
+              alt="AI Poem Generator"
+            />
+            <div class="card-body">
+              <h5 class="card-title">AI Poem Generator</h5>
+              <p class="card-text">
+                AI Poem Generator that generates poems based on the user's input
+                theme.
+                <br />Clean and simple interface.
+              </p>
+              <a href="work.html#poem" class="btn btn-branding">Learn more</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container mt-5 mb-5">
-      <div class="row">
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">Weather app</h3>
-          <p class="mb-4 text-muted">
-            Simple, light coloured weather app <br />
-            Search the weather in any location of the globe
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
-        </div>
-        <div class="col d-none d-md-block">
-          <img
-            src="images/weather-app.PNG"
-            alt="Weather app"
-            class="img-fluid"
-          />
-        </div>
+
+    <div class="about-me mt-5 d-flex justify-content-evenly align-items-center">
+      <div class="fs-3">Get to know me</div>
+      <div>
+        <a href="about.html" class="btn btn-branding">About me</a>
       </div>
+    </div>
+    <div>
+      <a href="#" class="btn btn-branding mt-5">Contact me</a>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
