--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">AF</a>
         <button
@@ -54,6 +54,70 @@
         </div>
       </div>
     </nav>
+    <h1>Portfolio</h1>
+    <h2>Each project is a unique piece of development</h2>
+    <div class="container" id="poem">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/ai-poem-generator.PNG"
+            alt="AI poem generator"
+            class="img-fluid align-self-center"
+          />
+        </div>
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">AI Poem Generator</h3>
+          <p class="mb-4 text-muted">
+            This is an AI Poem Generator that generates poems based on the
+            user's input theme
+            <br />
+            Clean and simple interface
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5" id="clock">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/world-clock.PNG"
+            alt="World Clock"
+            class="img-fluid align-self-center"
+          />
+        </div>
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">World Clock</h3>
+          <p class="mb-4 text-muted">
+            World Clock with multiple predifined locations.
+            <br />
+            Includes current location timezone
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5 mb-5" id="weather">
+      <div class="row">
+        <div class="col project-description align-self-center">
+          <h3 class="mb-5">Weather app</h3>
+          <p class="mb-4 text-muted">
+            Simple, light coloured weather app <br />
+            Search the weather in any location of the globe
+          </p>
+          <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/weather-app.PNG"
+            alt="Weather app"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
