Complete the Homepage and created a footer

--- a/about.html
+++ b/about.html
@@ -58,6 +58,13 @@
       <div>
         <h2>Hi, I am Ana Fontão</h2>
         <h3>Front-end developer based in Portugal</h3>
+        <ul class="mt-4 d-flex justify-content-center align-items-center">
+          <li class="fs-5">Tech Stack |</li>
+          <li><i class="fa-brands fa-html5"></i></li>
+          <li><i class="fa-brands fa-css3-alt"></i></li>
+          <li><i class="fa-brands fa-js"></i></li>
+        </ul>
+
         <a href="" class="btn btn-branding">Check my projects</a>
       </div>
 
