--- a/index.html
+++ b/index.html
@@ -57,12 +57,9 @@
     <div class="hero">
       <h1>Ana Fontão</h1>
       <h2 class="mb-5">Front-end developer based in Europe</h2>
-      <ul class="d-flex justify-content-center align-items-center">
-        <li class="fs-5">Tech Stack |</li>
-        <li><i class="fa-brands fa-html5"></i></li>
-        <li><i class="fa-brands fa-css3-alt"></i></li>
-        <li><i class="fa-brands fa-js"></i></li>
-      </ul>
+      <a href="about.html"
+        ><i class="fa-regular fa-address-card"></i> More info</a
+      >
     </div>
     <p class="text-center mt-5 mb-5">Check some of my featured projects</p>
     <div class="container">
@@ -125,14 +122,25 @@
       </div>
     </div>
 
-    <div class="about-me mt-5 d-flex justify-content-evenly align-items-center">
-      <div class="fs-3">Get to know me</div>
+    <div
+      class="contact-me mt-5 d-flex justify-content-evenly align-items-center text-center"
+    >
+      <div>Let's work together!</div>
       <div>
-        <a href="about.html" class="btn btn-branding">About me</a>
+        <a href="contact.html" class="btn btn-branding contact-button"
+          >Contact</a
+        >
       </div>
     </div>
-    <div>
-      <a href="#" class="btn btn-branding mt-5">Contact me</a>
+    <div class="footer text-center m-5">
+      This website was coded by
+      <a href="https://github.com/aifontao" target="_blank"
+        ><strong>Ana Fontão</strong></a
+      >
+      and is open-sourced on
+      <a href="https://github.com/aifontao/portfolio-project" target="_blank"
+        ><strong>Github</strong></a
+      >
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
