Added the footer to all the pages

--- a/about.html
+++ b/about.html
@@ -54,25 +54,47 @@
         </div>
       </div>
     </nav>
-    <div class="container d-flex justify-content-center mt-5 mb-5 gap-4">
-      <div>
+
+    <div class="about-hero d-flex justify-content-evenly">
+      <div class="hero-text text-start">
+        <h1>Font-End Developer</h1>
         <h2>Hi, I am Ana Fontão</h2>
-        <h3>Front-end developer based in Portugal</h3>
-        <ul class="mt-4 d-flex justify-content-center align-items-center">
+        <h3>
+          A passionate Front-end developer. <br />
+          📍 Based in Portugal, Europe.
+        </h3>
+        <ul class="mt-4 d-flex justify-content-start align-items-center">
           <li class="fs-5">Tech Stack |</li>
           <li><i class="fa-brands fa-html5"></i></li>
           <li><i class="fa-brands fa-css3-alt"></i></li>
           <li><i class="fa-brands fa-js"></i></li>
+          <li><i class="fa-brands fa-bootstrap"></i></li>
         </ul>
-
-        <a href="" class="btn btn-branding">Check my projects</a>
       </div>
+      <div class="hero-img">
+        <img src="images/AnaFontao.JPG" alt="Ana Fontao" class="hero-img" />
+      </div>
+    </div>
 
-      <img
-        src="images/AnaFontao.JPG"
-        alt="AnaFontao"
-        class="rounded my-photo"
-      />
+    <div
+      class="contact-me mt-5 d-flex justify-content-evenly align-items-center text-center"
+    >
+      <div class="fs-3">Let's work together!</div>
+      <div>
+        <a href="contact.html" class="btn btn-branding contact-button"
+          ><strong>Contact</strong></a
+        >
+      </div>
+    </div>
+    <div class="footer text-center m-5">
+      This website was coded by
+      <a href="https://github.com/aifontao" target="_blank"
+        ><strong>Ana Fontão</strong></a
+      >
+      and is open-sourced on
+      <a href="https://github.com/aifontao/portfolio-project" target="_blank"
+        ><strong>Github</strong></a
+      >
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
