--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
     <div
       class="contact-me mt-5 d-flex justify-content-evenly align-items-center text-center"
     >
-      <div>Let's work together!</div>
+      <div class="fs-3">Let's work together!</div>
       <div>
         <a href="contact.html" class="btn btn-branding contact-button"
-          >Contact</a
+          ><strong>Contact</strong></a
         >
       </div>
     </div>
