--- a/work.html
+++ b/work.html
@@ -118,6 +118,27 @@
         </div>
       </div>
     </div>
+
+    <div
+      class="contact-me mt-5 d-flex justify-content-evenly align-items-center text-center"
+    >
+      <div class="fs-3">Let's work together!</div>
+      <div>
+        <a href="contact.html" class="btn btn-branding contact-button"
+          ><strong>Contact</strong></a
+        >
+      </div>
+    </div>
+    <div class="footer text-center m-5">
+      This website was coded by
+      <a href="https://github.com/aifontao" target="_blank"
+        ><strong>Ana Fontão</strong></a
+      >
+      and is open-sourced on
+      <a href="https://github.com/aifontao/portfolio-project" target="_blank"
+        ><strong>Github</strong></a
+      >
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
