--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,17 @@
     <a href="mailto:anaisabelfontaogmail.com" id="email"
       >anaisabelfontaogmail.com</a
     >
+
+    <div class="footer text-center m-5">
+      This website was coded by
+      <a href="https://github.com/aifontao" target="_blank"
+        ><strong>Ana Fontão</strong></a
+      >
+      and is open-sourced on
+      <a href="https://github.com/aifontao/portfolio-project" target="_blank"
+        ><strong>Github</strong></a
+      >
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
