Completed the About me page

--- a/about.html
+++ b/about.html
@@ -55,27 +55,48 @@
       </div>
     </nav>
 
-    <div class="about-hero d-flex justify-content-evenly">
-      <div class="hero-text text-start">
-        <h1>Font-End Developer</h1>
-        <h2>Hi, I am Ana Fontão</h2>
-        <h3>
-          A passionate Front-end developer. <br />
-          📍 Based in Portugal, Europe.
-        </h3>
-        <ul class="mt-4 d-flex justify-content-start align-items-center">
-          <li class="fs-5">Tech Stack |</li>
-          <li><i class="fa-brands fa-html5"></i></li>
-          <li><i class="fa-brands fa-css3-alt"></i></li>
-          <li><i class="fa-brands fa-js"></i></li>
-          <li><i class="fa-brands fa-bootstrap"></i></li>
-        </ul>
+    <div
+      class="about-hero d-flex justify-content-evenly align-items-center p-5"
+    >
+      <div class="about-hero-text">
+        <h1 class="mb-5">Font-End Developer</h1>
+        <h2 class="mb-3">
+          👋 Hi! I am Ana Fontão, a passionate Front-end developer.
+          <br />📍 Based in Portugal, Europe.
+        </h2>
+        <p>
+          I’m currently seeking new opportunities in front-end development.
+          <br />Open to work remotely and with flexible hours.
+        </p>
+        <div class="media-links fs-4">
+          <a href="https://www.linkedin.com/in/anaisabelfontao/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/aifontao" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
       </div>
-      <div class="hero-img">
-        <img src="images/AnaFontao.JPG" alt="Ana Fontao" class="hero-img" />
+      <div class="about-hero-img">
+        <img
+          src="images/AnaFontao.JPG"
+          alt="Ana Fontao"
+          class="about-hero-img"
+        />
       </div>
     </div>
-
+    <ul class="mt-5 d-flex justify-content-center align-items-center">
+      <li class="tech-stack">Tech Stack</li>
+      <li><i class="fa-brands fa-html5 fs-1"></i></li>
+      <li><i class="fa-brands fa-css3-alt fs-1"></i></li>
+      <li><i class="fa-brands fa-js fs-1"></i></li>
+      <li><i class="fa-brands fa-bootstrap fs-1"></i></li>
+    </ul>
+    <div class="text-center">
+      <a href="work.html" class="btn btn-branding portfolio-button"
+        >Check my Portfolio</a
+      >
+    </div>
     <div
       class="contact-me mt-5 d-flex justify-content-evenly align-items-center text-center"
     >
