Completed the work page

--- a/work.html
+++ b/work.html
@@ -54,67 +54,111 @@
         </div>
       </div>
     </nav>
-    <h1>Portfolio</h1>
-    <h2>Each project is a unique piece of development</h2>
-    <div class="container" id="poem">
+    <div class="work-hero">
+      <h1 class="mb-3">Portfolio</h1>
+      <h2>Each project is a unique piece of development</h2>
+    </div>
+    <div class="project-container" id="poem">
       <div class="row">
         <div class="col d-none d-md-block">
           <img
             src="images/ai-poem-generator.PNG"
             alt="AI poem generator"
-            class="img-fluid align-self-center"
+            class="img-fluid align-self-center project-image"
           />
         </div>
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">AI Poem Generator</h3>
+        <div class="col project-description align-self-center text-center">
+          <h3 class="mb-4">AI Poem Generator</h3>
           <p class="mb-4 text-muted">
-            This is an AI Poem Generator that generates poems based on the
-            user's input theme
+            AI Poem Generator that generates poems based on the user's input
+            theme.
             <br />
-            Clean and simple interface
+            Clean and simple interface.
+            <br /><br />
+            Built using HTML, CSS, JavaScript, AI and an active API.
           </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
+          <div class="project-link d-flex justify-content-center">
+            <div class="col-3">
+              <a
+                href="https://github.com/aifontao/ai-poem-generator"
+                target="_blank"
+                >Code <i class="fa-brands fa-github mb-3"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a
+                href="https://ai-poem-generator-aif.netlify.app/"
+                target="_blank"
+                >Live Demo <i class="fa-solid fa-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="container mt-5" id="clock">
+    <div class="project-container mt-5 mb-5" id="weather">
       <div class="row">
-        <div class="col d-none d-md-block">
-          <img
-            src="images/world-clock.PNG"
-            alt="World Clock"
-            class="img-fluid align-self-center"
-          />
-        </div>
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">World Clock</h3>
+        <div class="col project-description align-self-center text-center">
+          <h3 class="mb-4">Weather app</h3>
           <p class="mb-4 text-muted">
-            World Clock with multiple predifined locations.
-            <br />
-            Includes current location timezone
+            Simple, light coloured weather app.
+            <br />Search the weather in any location of the globe. <br /><br />
+            Built using HTML, CSS, JavaScript and an active API.
           </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="container mt-5 mb-5" id="weather">
-      <div class="row">
-        <div class="col project-description align-self-center">
-          <h3 class="mb-5">Weather app</h3>
-          <p class="mb-4 text-muted">
-            Simple, light coloured weather app <br />
-            Search the weather in any location of the globe
-          </p>
-          <a href="" class="btn btn-branding-outline">Learn more</a>
+          <div class="project-link d-flex justify-content-center">
+            <div class="col-3">
+              <a href="https://github.com/aifontao/weather-app" target="_blank"
+                >Code <i class="fa-brands fa-github mb-3"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a href="https://weather-app-aif.netlify.app/" target="_blank"
+                >Live Demo <i class="fa-solid fa-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
         </div>
         <div class="col d-none d-md-block">
           <img
             src="images/weather-app.PNG"
             alt="Weather app"
-            class="img-fluid"
+            class="img-fluid project-image"
           />
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container mt-5" id="clock">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/clock-app.png"
+            alt="World Clock"
+            class="img-fluid align-self-center project-image"
+          />
+        </div>
+        <div class="col project-description align-self-center text-center">
+          <h3 class="mb-4">World Clock</h3>
+          <p class="mb-4 text-muted">
+            World Clock with multiple predifined locations.
+            <br />
+            Includes current location timezone.
+            <br /><br />
+            Built using HTML, CSS, JavaScript and an active API.
+          </p>
+          <div class="project-link d-flex justify-content-center">
+            <div class="col-3">
+              <a href="https://github.com/aifontao/world-clock" target="_blank"
+                >Code <i class="fa-brands fa-github mb-3"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a href="https://world-clock-aif.netlify.app/" target="_blank"
+                >Live Demo <i class="fa-solid fa-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
