Added content to the contact page

--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,37 @@
         </div>
       </div>
     </nav>
-    <a href="mailto:anaisabelfontaogmail.com" id="email"
-      >anaisabelfontaogmail.com</a
-    >
+    <div class="contact-container">
+      <h1>Contact</h1>
+      <h2>Don't be shy! Let's get in touch!</h2>
+      <div class="d-flex justify-content-evenly">
+        <div class="row flex-fill">
+          <div class="col"><i class="fa-solid fa-map-location-dot"></i></div>
+          <div class="col">Location <br />Portugal, Europe</div>
+        </div>
+        <div class="row flex-fill">
+          <div class="col"><i class="fa-solid fa-language"></i></div>
+          <div class="col">Languages <br />English and Portugese</div>
+        </div>
+        <div class="row">
+          <div class="col"><i class="fa-regular fa-envelope"></i></div>
+          <div class="col">
+            E-mail <br /><a href="mailto:anaisabelfontaogmail.com" id="email"
+              >anaisabelfontaogmail.com</a
+            >
+          </div>
+        </div>
+        <div class="row">
+          <div class="col"><i class="fa-brands fa-linkedin-in"></i></div>
+          <div class="col">
+            Linked-in <br /><a
+              href="https://www.linkedin.com/in/anaisabelfontao/"
+              >@anaisabelfontao</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="footer text-center m-5">
       This website was coded by
