--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
             class="img-fluid align-self-center project-image"
           />
         </div>
-        <div class="col project-description align-self-center text-center">
+        <div class="col align-self-center text-center">
           <h3 class="mb-4">AI Poem Generator</h3>
           <p class="mb-4 text-muted">
             AI Poem Generator that generates poems based on the user's input
@@ -99,11 +99,11 @@
 
     <div class="project-container mt-5 mb-5" id="weather">
       <div class="row">
-        <div class="col project-description align-self-center text-center">
+        <div class="col align-self-center text-center">
           <h3 class="mb-4">Weather app</h3>
           <p class="mb-4 text-muted">
             Simple, light coloured weather app.
-            <br />Search the weather in any location of the globe. <br /><br />
+            <br />Search the weather in any location of the globe.<br /><br />
             Built using HTML, CSS, JavaScript and an active API.
           </p>
           <div class="project-link d-flex justify-content-center">
@@ -138,7 +138,7 @@
             class="img-fluid align-self-center project-image"
           />
         </div>
-        <div class="col project-description align-self-center text-center">
+        <div class="col align-self-center text-center">
           <h3 class="mb-4">World Clock</h3>
           <p class="mb-4 text-muted">
             World Clock with multiple predifined locations.
