Completed the contact page

--- a/about.html
+++ b/about.html
@@ -62,11 +62,11 @@
         <h1 class="mb-5">Font-End Developer</h1>
         <h2 class="mb-3">
           👋 Hi! I am Ana Fontão, a passionate Front-end developer.
-          <br />📍 Based in Portugal, Europe.
+          <br />📍 Based in Portugal - Europe.
         </h2>
         <p>
           I’m currently seeking new opportunities in front-end development.
-          <br />Open to work remotely and with flexible hours.
+          <br />Open to work abroad, remotely and with flexible hours.
         </p>
         <div class="media-links fs-4">
           <a href="https://www.linkedin.com/in/anaisabelfontao/" target="_blank"
