--- a/contact.html
+++ b/contact.html
@@ -56,30 +56,41 @@
     </nav>
     <div class="contact-container">
       <h1>Contact</h1>
-      <h2>Don't be shy! Let's get in touch!</h2>
-      <div class="d-flex justify-content-evenly">
-        <div class="row flex-fill">
-          <div class="col"><i class="fa-solid fa-map-location-dot"></i></div>
-          <div class="col">Location <br />Portugal, Europe</div>
-        </div>
-        <div class="row flex-fill">
-          <div class="col"><i class="fa-solid fa-language"></i></div>
-          <div class="col">Languages <br />English and Portugese</div>
-        </div>
+      <h2 class="mb-5">Don't be shy! Let's get in touch! 👩‍💻</h2>
+      <div class="d-flex justify-content-start contact-info gap-5">
         <div class="row">
-          <div class="col"><i class="fa-regular fa-envelope"></i></div>
           <div class="col">
-            E-mail <br /><a href="mailto:anaisabelfontaogmail.com" id="email"
+            <i class="fa-regular fa-envelope contact-logo"></i>
+          </div>
+          <div class="col">
+            <strong>E-mail</strong> <br /><a
+              href="mailto:anaisabelfontaogmail.com"
+              id="email"
               >anaisabelfontaogmail.com</a
             >
           </div>
         </div>
         <div class="row">
-          <div class="col"><i class="fa-brands fa-linkedin-in"></i></div>
           <div class="col">
-            Linked-in <br /><a
+            <i class="fa-brands fa-linkedin-in contact-logo"></i>
+          </div>
+          <div class="col">
+            <strong>Linked-in</strong><br /><a
               href="https://www.linkedin.com/in/anaisabelfontao/"
+              target="_blank"
               >@anaisabelfontao</a
+            >
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <i class="fa-brands fa-github contact-logo"></i>
+          </div>
+          <div class="col">
+            <strong>Github</strong><br /><a
+              href="https://github.com/aifontao"
+              target="_blank"
+              >@aifontao</a
             >
           </div>
         </div>
