--- a/work.html
+++ b/work.html
@@ -82,14 +82,14 @@
               <a
                 href="https://github.com/aifontao/ai-poem-generator"
                 target="_blank"
-                >Code <i class="fa-brands fa-github mb-3"></i
+                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
               ></a>
             </div>
             <div class="col-3">
               <a
                 href="https://ai-poem-generator-aif.netlify.app/"
                 target="_blank"
-                >Live Demo <i class="fa-solid fa-up-right-from-square"></i
+                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
               ></a>
             </div>
           </div>
@@ -109,12 +109,12 @@
           <div class="project-link d-flex justify-content-center">
             <div class="col-3">
               <a href="https://github.com/aifontao/weather-app" target="_blank"
-                >Code <i class="fa-brands fa-github mb-3"></i
+                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
               ></a>
             </div>
             <div class="col-3">
               <a href="https://weather-app-aif.netlify.app/" target="_blank"
-                >Live Demo <i class="fa-solid fa-up-right-from-square"></i
+                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
               ></a>
             </div>
           </div>
@@ -150,12 +150,12 @@
           <div class="project-link d-flex justify-content-center">
             <div class="col-3">
               <a href="https://github.com/aifontao/world-clock" target="_blank"
-                >Code <i class="fa-brands fa-github mb-3"></i
+                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
               ></a>
             </div>
             <div class="col-3">
               <a href="https://world-clock-aif.netlify.app/" target="_blank"
-                >Live Demo <i class="fa-solid fa-up-right-from-square"></i
+                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
               ></a>
             </div>
           </div>
