Improved website responsiveness

--- a/about.html
+++ b/about.html
@@ -55,11 +55,9 @@
       </div>
     </nav>
 
-    <div
-      class="about-hero d-flex justify-content-evenly align-items-center p-5"
-    >
+    <div class="about-hero d-flex justify-content-evenly align-items-center">
       <div class="about-hero-text">
-        <h1 class="mb-5">Font-End Developer</h1>
+        <h1 class="mb-4">Font-End Developer</h1>
         <h2 class="mb-3">
           👋 Hi! I am Ana Fontão, a passionate Front-end developer.
           <br />📍 Based in Portugal - Europe.
