--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ana Fontao / About page</title>
+    <meta
+      name="description"
+      content="Ana Fontao is a Junior Front-end developer based in Portugal, Europe."
+    />
+    <title>Ana Fontao - About page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,7 +51,7 @@
         >
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link active" href="about.html">About</a>
             <a class="nav-link" href="work.html">Work</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </div>
@@ -105,7 +109,7 @@
         >
       </div>
     </div>
-    <div class="footer text-center m-5">
+    <footer class="container text-center m-5">
       This website was coded by
       <a href="https://github.com/aifontao" target="_blank"
         ><strong>Ana Fontão</strong></a
@@ -114,7 +118,7 @@
       <a href="https://github.com/aifontao/portfolio-project" target="_blank"
         ><strong>Github</strong></a
       >
-    </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
