--- a/work.html
+++ b/work.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ana Fontao is a Junior Front-end developer based in Portugal, Europe."
+    />
     <title>AF - Work</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -48,7 +52,7 @@
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="about.html">About</a>
-            <a class="nav-link" href="work.html">Work</a>
+            <a class="nav-link active" href="work.html">Work</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -173,7 +177,7 @@
         >
       </div>
     </div>
-    <div class="footer text-center m-5">
+    <footer class="container text-center m-5">
       This website was coded by
       <a href="https://github.com/aifontao" target="_blank"
         ><strong>Ana Fontão</strong></a
@@ -182,7 +186,7 @@
       <a href="https://github.com/aifontao/portfolio-project" target="_blank"
         ><strong>Github</strong></a
       >
-    </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
