Fixed the footer

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
         >
       </div>
     </div>
-    <footer class="container text-center m-5">
+    <footer class="text-center m-5">
       This website was coded by
       <a href="https://github.com/aifontao" target="_blank"
         ><strong>Ana Fontão</strong></a
