--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
       name="description"
       content="Ana Fontao is a Junior Front-end developer based in Portugal, Europe."
     />
-    <title>AF - Work</title>
+    <title>Ana Fontao - Work</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -177,7 +177,7 @@
         >
       </div>
     </div>
-    <footer class="container text-center m-5">
+    <footer class="text-center m-5">
       This website was coded by
       <a href="https://github.com/aifontao" target="_blank"
         ><strong>Ana Fontão</strong></a
