--- a/work.html
+++ b/work.html
@@ -62,6 +62,43 @@
       <h1 class="mb-3">Portfolio</h1>
       <h2>Each project is a unique piece of development</h2>
     </div>
+
+    <div class="project-container mt-5 mb-5" id="weather">
+      <div class="row">
+        <div class="col align-self-center text-center">
+          <h3 class="mb-4">React Weather app</h3>
+          <p class="mb-4 text-muted">
+            Simple, light coloured weather app.
+            <br />Search the weather in any location of the globe.<br /><br />
+            Built using React and an active API.
+          </p>
+          <div class="project-link d-flex justify-content-center">
+            <div class="col-3">
+              <a
+                href="https://github.com/aifontao/weather-react-app"
+                target="_blank"
+                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a
+                href="https://weather-react-app-aif.netlify.app/"
+                target="_blank"
+                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/weather_react_app.png"
+            alt="Weather app"
+            class="img-fluid project-image"
+          />
+        </div>
+      </div>
+    </div>
+
     <div class="project-container" id="poem">
       <div class="row">
         <div class="col d-none d-md-block">
@@ -104,20 +141,22 @@
     <div class="project-container mt-5 mb-5" id="weather">
       <div class="row">
         <div class="col align-self-center text-center">
-          <h3 class="mb-4">Weather app</h3>
+          <h3 class="mb-4">Travel Guide</h3>
           <p class="mb-4 text-muted">
-            Simple, light coloured weather app.
-            <br />Search the weather in any location of the globe.<br /><br />
-            Built using HTML, CSS, JavaScript and an active API.
+            Travel guide landing page
+            <br />I love my birth city and this work is a love letter to it!<br /><br />
+            Built using HTML and CSS.
           </p>
           <div class="project-link d-flex justify-content-center">
             <div class="col-3">
-              <a href="https://github.com/aifontao/weather-app" target="_blank"
+              <a
+                href="https://github.com/aifontao/guimaraes-project"
+                target="_blank"
                 >Code <i class="fa-brands fa-github mb-3 fs-5"></i
               ></a>
             </div>
             <div class="col-3">
-              <a href="https://weather-app-aif.netlify.app/" target="_blank"
+              <a href="https://guimaraes-travel.netlify.app/" target="_blank"
                 >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
               ></a>
             </div>
@@ -125,8 +164,8 @@
         </div>
         <div class="col d-none d-md-block">
           <img
-            src="images/weather-app.PNG"
-            alt="Weather app"
+            src="images/travel_guide.png"
+            alt="Travel guide"
             class="img-fluid project-image"
           />
         </div>
