Added the dictionary project to my work page

--- a/work.html
+++ b/work.html
@@ -66,10 +66,11 @@
     <div class="project-container mt-5 mb-5" id="weather">
       <div class="row">
         <div class="col align-self-center text-center">
-          <h3 class="mb-4">React Weather app</h3>
+          <h3 class="mb-4">Weather React app</h3>
           <p class="mb-4 text-muted">
             Simple, light coloured weather app.
-            <br />Search the weather in any location of the globe.<br /><br />
+            <br />Search the weather in any location of the globe.<br />
+            Responsive app with a simple interface and interactive icons.<br /><br />
             Built using React and an active API.
           </p>
           <div class="project-link d-flex justify-content-center">
@@ -93,6 +94,77 @@
           <img
             src="images/weather_react_app.png"
             alt="Weather app"
+            class="img-fluid project-image"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container" id="poem">
+      <div class="row">
+        <div class="col d-none d-md-block">
+          <img
+            src="images/dictionary_react_app.png"
+            alt="AI poem generator"
+            class="img-fluid align-self-center project-image"
+          />
+        </div>
+        <div class="col align-self-center text-center">
+          <h3 class="mb-4">Dictionary React app</h3>
+          <p class="mb-4 text-muted">
+            Search for any word in english and get information on its etymology,
+            pronunciation, usage, synonyms, images and other data.
+            <br />
+            Responsive app with a simple interface.
+            <br /><br />
+            Built using React and 2 active APIs.
+          </p>
+          <div class="project-link d-flex justify-content-center">
+            <div class="col-3">
+              <a
+                href="https://github.com/aifontao/dictionary-react-app"
+                target="_blank"
+                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a href="https://dictionary-app-aif.netlify.app/" target="_blank"
+                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container mt-5 mb-5" id="weather">
+      <div class="row">
+        <div class="col align-self-center text-center">
+          <h3 class="mb-4">Travel Guide</h3>
+          <p class="mb-4 text-muted">
+            Travel guide landing page
+            <br />I love my birth city and this work is a love letter to it!<br /><br />
+            Built using HTML and CSS.
+          </p>
+          <div class="project-link d-flex justify-content-center">
+            <div class="col-3">
+              <a
+                href="https://github.com/aifontao/guimaraes-project"
+                target="_blank"
+                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a href="https://guimaraes-travel.netlify.app/" target="_blank"
+                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/travel_guide.png"
+            alt="Travel guide"
             class="img-fluid project-image"
           />
         </div>
@@ -134,40 +206,6 @@
               ></a>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-container mt-5 mb-5" id="weather">
-      <div class="row">
-        <div class="col align-self-center text-center">
-          <h3 class="mb-4">Travel Guide</h3>
-          <p class="mb-4 text-muted">
-            Travel guide landing page
-            <br />I love my birth city and this work is a love letter to it!<br /><br />
-            Built using HTML and CSS.
-          </p>
-          <div class="project-link d-flex justify-content-center">
-            <div class="col-3">
-              <a
-                href="https://github.com/aifontao/guimaraes-project"
-                target="_blank"
-                >Code <i class="fa-brands fa-github mb-3 fs-5"></i
-              ></a>
-            </div>
-            <div class="col-3">
-              <a href="https://guimaraes-travel.netlify.app/" target="_blank"
-                >Live Demo <i class="fa-solid fa-up-right-from-square fs-6"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="col d-none d-md-block">
-          <img
-            src="images/travel_guide.png"
-            alt="Travel guide"
-            class="img-fluid project-image"
-          />
         </div>
       </div>
     </div>
