Edited the images of the work page

--- a/work.html
+++ b/work.html
@@ -142,7 +142,7 @@
         <div class="col align-self-center text-center">
           <h3 class="mb-4">Travel Guide</h3>
           <p class="mb-4 text-muted">
-            Travel guide landing page
+            Travel guide landing page.
             <br />I love my birth city and this work is a love letter to it!<br /><br />
             Built using HTML and CSS.
           </p>
