Updated index with my latest projects

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
     </div>
     <p class="text-center mt-5 mb-5">Check some of my featured projects</p>
     <div class="container">
-      <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
         <div class="col">
           <div class="card h-100 text-center">
             <img
-              src="images/weather-app.png"
+              src="images/weather_react_app.png"
               class="card-img-top"
               alt="Weather app"
             />
             <div class="card-body">
-              <h5 class="card-title">Weather app</h5>
+              <h5 class="card-title">Weather React app</h5>
               <p class="card-text">
                 Simple, light coloured weather app. <br />
                 Search the weather in any location of the globe.
@@ -90,18 +90,34 @@
         <div class="col">
           <div class="card h-100 text-center">
             <img
-              src="images/clock-app.png"
+              src="images/dictionary_react_app_page1.png"
               class="card-img-top"
-              alt="Clock app"
+              alt="Weather app"
             />
             <div class="card-body">
-              <h5 class="card-title">Clock app</h5>
+              <h5 class="card-title">Dictionary React app</h5>
               <p class="card-text">
-                World Clock with multiple predifined locations.
-                <br />
-                Includes current location timezone.
+                Responsive dictionary app. <br />
+                Search the meaning of any word in english.
               </p>
-              <a href="work.html#clock" class="btn btn-branding">Learn more</a>
+              <br />
+              <a href="work.html#dictionary" class="btn btn-branding"
+                >Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img
+              src="images/travel_guide_page1.png"
+              class="card-img-top"
+              alt="travel guide"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Travel</h5>
+              <p class="card-text">Travel guide landing page <br /></p>
+              <a href="work.html#travel" class="btn btn-branding">Learn more</a>
             </div>
           </div>
         </div>
@@ -120,6 +136,24 @@
                 <br />Clean and simple interface.
               </p>
               <a href="work.html#poem" class="btn btn-branding">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img
+              src="images/clock-app.png"
+              class="card-img-top"
+              alt="Clock app"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Clock app</h5>
+              <p class="card-text">
+                World Clock with multiple predifined locations.
+                <br />
+                Includes current location timezone.
+              </p>
+              <a href="work.html#clock" class="btn btn-branding">Learn more</a>
             </div>
           </div>
         </div>
