--- a/work.html
+++ b/work.html
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <div class="project-container" id="poem">
+    <div class="project-container" id="dictionary">
       <div class="row">
         <div class="col d-none d-md-block">
           <img
@@ -137,7 +137,7 @@
       </div>
     </div>
 
-    <div class="project-container mt-5 mb-5" id="weather">
+    <div class="project-container mt-5 mb-5" id="travel">
       <div class="row">
         <div class="col align-self-center text-center">
           <h3 class="mb-4">Travel Guide</h3>
