Updated the about page with new tech

--- a/about.html
+++ b/about.html
@@ -93,6 +93,8 @@
       <li><i class="fa-brands fa-css3-alt fs-1"></i></li>
       <li><i class="fa-brands fa-js fs-1"></i></li>
       <li><i class="fa-brands fa-bootstrap fs-1"></i></li>
+      <li><i class="fa-brands fa-react fs-1 fw-bold"></i></li>
+      <li><i class="fa-brands fa-github fs-1"></i></li>
     </ul>
     <div class="text-center">
       <a href="work.html" class="btn btn-branding portfolio-button"
