Updated the index

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
               alt="travel guide"
             />
             <div class="card-body">
-              <h5 class="card-title">Travel</h5>
-              <p class="card-text">Travel guide landing page <br /></p>
+              <h5 class="card-title">Travel guide</h5>
+              <p class="card-text">Travel guide landing page. <br /></p>
               <a href="work.html#travel" class="btn btn-branding">Learn more</a>
             </div>
           </div>
