--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             <strong>E-mail</strong> <br /><a
               href="mailto:anaisabelfontaogmail.com"
               id="email"
-              >anaisabelfontaogmail.com</a
+              >anaisabelfontao@gmail.com</a
             >
           </div>
         </div>
